# udemy-langchain

./: add_sentense.py  pyproject.toml
src/: chatbot_engine.py  sample.1.py  sample.2.py  slack_app.py
